style.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap");
*,
*::after,
*::before {
  box-sizing: inherit;
}

:root {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  --main_background: hsl(233, 47%, 7%);
  --card_background: hsl(244, 38%, 16%);
  --accent: hsl(277, 64%, 61%);
  --main_text: hsla(0, 0%, 100%, 0.75);
  --stat_heading: hsla(0, 0%, 100%, 0.6);
  background-color: var(--main_background);
  font-family: "Inter", sans-serif; /* 400 700 */
}
body {
  padding: 4em 1em;
  height: 100vh;
  min-height: 900px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.card {
  background-color: var(--card_background);
  color: var(--main_text);
  margin: 0 auto 2em;
  font-size: 0.9375rem;
  border-radius: 8px;
  overflow-x: hidden;
  text-align: center;
  max-width: 330px;
}
.img_container {
  background-color: hsl(276.7, 83.2%, 32.7%);
  line-height: 0;
}
picture {
  display: flex;
}
.img_container img {
  width: 100%;
  max-height: 250px;
  opacity: 0.4;
  object-fit: cover;
}
.card_content {
  padding: 1em 2em;
}
.title {
  font-size: 1.75rem;
  color: white;
  font-weight: 500;
}
.title em {
  color: var(--accent);
  font-style: normal;
}
.body_text {
  line-height: 1.7;
  font-weight: lighter;
}
.stats {
  margin: 1em 0 0;
}
.stat_item {
  padding: 0.75em;
}
.stat_item .number {
  color: white;
  font-size: 1.5rem;
  font-weight: 500;
  margin: 0;
}

.stat_item .stat_desc {
  color: var(--stat_heading);
  text-transform: uppercase;
  font-size: 0.75rem;
  letter-spacing: 0.1em;
  margin: 0.5em;
}
@media screen and (min-width: 1000px) {
  .card {
    display: flex;
    flex-direction: row-reverse;
    max-width: 900px;
    text-align: left;
  }
  .card_content,
  .img_container {
    width: 50%;
  }
  .card_content {
    padding: 3em 6em 3em 3em;
  }
  .title {
    margin-top: 0;
  }
  .img_container img {
    max-width: 100%;
    max-height: 100%;
  }
  .stats {
    display: flex;
    justify-content: space-between;
    margin-top: 4em;
  }
  .stat_item {
    padding: 0;
  }
  .stat_item .stat_desc {
    margin: 0;
    margin-top: 0.5em;
  }
}

